--- a/index.html
+++ b/index.html
@@ -708,10 +708,10 @@
               that blend creativity, technical expertise, and innovation to deliver 
               impactful digital solutions.
             </p>
-            <a href="services.html" class="service-btn">
+            <!-- <a href="services.html" class="service-btn">
               View All Services
               <i class="bi bi-arrow-right"></i>
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
