--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               </div>
 
               <div class="cta-section">
-                <a href="assets/resume/Ganesh_Rajpoot_Resume.pdf" class="btn btn-primary">
+                <a href="###" class="btn btn-primary">
                   <i class="bi bi-download"></i>
                   Download Resume
                 </a>
