--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
 
           <div class="resume-item">
             <h4>Web Developer</h4>
-            <h5>Sep 2021 – Mar 2022</h5>
-            <p><i class="bi bi-building"></i> Cobaltzebra Info Technologies Pvt. Ltd.</p>
+            <h5>Nov 2021 – Mar 2022</h5>
+            <p><i class="bi bi-building"></i>Applied Information System Pvt. Ltd.</p>
             <ul>
               <li>Developed responsive websites using HTML, CSS, JS, Bootstrap.</li>
               <li>Implemented cross-browser compatibility & mobile-first design.</li>
